@@ -63,6 +63,7 @@ Version 1.11.0+svn:
    * Fixed a bug disallowing the left shift and meta key to be detected in
      the hotkeys
    * Added -Wuseless-cast to the CMake pedantic flags.
+   * Added -Wc++11-compat to the CMake pedantic flags.
 
 Version 1.11.0:
  * Add-ons client:
